--- a/main/index.html
+++ b/main/index.html
@@ -31,16 +31,18 @@
 	.carousel-caption > p{
 		color:#74fc3a;
 	}
+
 	</style>
 	
 </head>
 <body>
 	<div id="wrapper" class="jumbotron">
 	
-	<!-- Navigation -->
+	<!-- Navigation big-->
 	
 	<div class="container">
 	<div class="row">
+	<div class="hidden-xs">
 	<div class="col-md-1 hidden-sm hidden-xs">
 	<a class="logo img-fluid" href="#"><img src="assets/img/logo.png" width="120px" height="120px"></a>
 	</div>
@@ -67,12 +69,30 @@
 	</div>
 	</div>
 	</div>
-	
+	</div>
+
+	<!-- Navigation small-->
+
+		<ul class="ul-sm">
+			<li class="dropdown nav-sm">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-bars"></span></a>
+			</li>
+				<ul class="dropdown-menu">
+					<li><a href="#">Servicios</a></li>
+					<li><a href="#">Sobre</a></li>
+					<li><a href="#">Contáctanos</a></li>
+					<li><a href="assets/services/sesion.html">Iniciar Sesión</a></li>
+					<li><a href="#">Social</a></li>
+				</ul>
+				<li class="nav-sm" style="float: right;"><a href="#"><span class="fa fa-info-circle"></span></a></li>
+				<li class="nav-sm" style="float: right;"><a href="assets/services/sesion.html"><span class="fa fa-user"></span></a></li>
+	</ul>
+
 	<!-- Services Content-->
 	
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12"><h1 class="text-center" style="font-family:main; color:#00e600;">BitWizard</h1></div>
+			<div class="col-md-12"><h1 class="text-center" style="font-family:main; color:#00e600; margin-top: 20%; font-size: 4em;">BitWizard</h1></div>
 		</div>
 	</div>
 	
@@ -206,7 +226,7 @@
 					<div class="collapse" id="collapseExample">
 						  <div>
 							-Para comprar escoje una cuenta y le das el botón de "comprar", despues podras hablar con nosotros y te damos las contraseña y el nombre de usuario de la cuenta y pasamos a la transacción.
-							<br />-Para vender una cuenta dale <a href="#">aqui</a> o sino busques la opción en la sección de venta de cuentas
+							<br />-Para vender una cuenta dale <a href="assets/services/playwizard.html">aqui</a> o sino busques la opción en la sección de venta de cuentas
 						  </div>
 						</div>
 				  </div>
