responsive title: incomplete

--- a/main/index.html
+++ b/main/index.html
@@ -59,7 +59,7 @@
     <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
+    <li><a href="https://fb.me/BitWizardCR" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
     <li><a href="#"><i class="fa fa-envelope"></i></a></li>
     <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
   </ul>
@@ -90,9 +90,14 @@
 
 	<!-- Services Content-->
 	
-	<div class="container">
+	<p class="big" style="margin-top: 10%;">A</p>
+	<div class="container big">
+		<h1 class="text-center" style="font-family:main; color:#00e600; margin-top: 5%; font-size: 4em;" >BitWizard</h1>
+	</div>
+
+	<div class="container small" style="display: none;">
 		<div class="row">
-			<div class="col-md-12"><h1 class="text-center" style="font-family:main; color:#00e600; margin-top: 20%; font-size: 4em;">BitWizard</h1></div>
+			<div class="col-md-12"><h1 class="text-center" style="font-family:main; color:#00e600; margin-top: 20%; font-size: 4em;" >BitWizard</h1></div>
 		</div>
 	</div>
 	
