--- a/main/index.html
+++ b/main/index.html
@@ -90,15 +90,12 @@
 
 	<!-- Services Content-->
 	
-	<p class="big" style="margin-top: 10%;">A</p>
-	<div class="container big">
-		<h1 class="text-center" style="font-family:main; color:#00e600; margin-top: 5%; font-size: 4em;" >BitWizard</h1>
+	<div class="big_t">
+		<h1 class="text-center" style="font-family:main; color:/*#00e600*/red; margin-top: 5%; font-size: 4em;" >BitWizard</h1>
 	</div>
 
-	<div class="container small" style="display: none;">
-		<div class="row">
-			<div class="col-md-12"><h1 class="text-center" style="font-family:main; color:#00e600; margin-top: 20%; font-size: 4em;" >BitWizard</h1></div>
-		</div>
+	<div class="small_t" style="display: none;">
+	<h1 class="text-center" style="font-family:main; color:#00e600; margin-top: 20%; font-size: 4em;" >BitWizard</h1>
 	</div>
 	
 	
@@ -216,7 +213,7 @@
   <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-6">
-			<video class="thumbnail" width="100%" height="100%" style="margin-top:2%;" controls autoplay>
+			<video class="thumbnail" width="100%" height="100%" style="margin-top:2%;" controls>
 				<source src="assets/videos/intro_bw.mp4" type="video/mp4">
 			</video>
 		</div>
