--- a/main/assets/services/sesion.html
+++ b/main/assets/services/sesion.html
@@ -92,7 +92,7 @@ $(document).ready(function(){
   <input class="w3-input w3-border" name="confirm" type="password" required></p> 
 <div class="btn-group btn-group-lg" role="group">
   <button class="btn btn-success" id="ini" onclick="change()">Iniciar Sesion</button>
-  <button type="submit" class="btn btn-primary" id="reg">Registrarse</button>
+  <button type="submit" class="btn btn-primary" name="submit" id="reg">Registrarse</button>
 </div>
 </form>
 </div>
