--- a/main/index.html
+++ b/main/index.html
@@ -91,11 +91,11 @@
 	<!-- Services Content-->
 	
 	<div class="big_t">
-		<h1 class="text-center" style="font-family:main; color:/*#00e600*/red; margin-top: 5%; font-size: 4em;" >BitWizard</h1>
+		<h1 class="text-center" style="font-family:main; color:#00e600; margin-top: 5%; font-size: 4em;" >BitWizard</h1>
 	</div>
 
-	<div class="small_t" style="display: none;">
-	<h1 class="text-center" style="font-family:main; color:#00e600; margin-top: 20%; font-size: 4em;" >BitWizard</h1>
+	<div class="small_t">
+		<h1 class="text-center" style="font-family:main; color:#00e600; margin-top: 20%; font-size: 4em;" >BitWizard</h1>
 	</div>
 	
 	
